# Iberdrola-Datathon

./: .gitignore  README.md  config.toml  main.py  pyproject.toml
data/raw/electric_capacity/: Iberdrola_2026_04_01.xlsx
docs/: index.html
notebooks/: 01_forecast.ipynb  02_backbone_analysis copy.ipynb  02_backbone_analysis.ipynb  EV_charging_points.ipynb  EV_forecast.ipynb  Iberdrola-Datathon.ipynb  analyze_segments_charging_points.ipynb  road_segment_visualization.ipynb  road_segments_processing.ipynb  visualize_road_network.ipynb
notebooks/archive/: EV_charging_points.ipynb  electric_capacity_visualization.ipynb
scripts/: 01_acquisition.py  02_standardization.py  03_processing.py  analyze_charging_sites_proximity.py  download_electric_capacity.py  download_ev_charging_points.py  download_ev_registrations.py  download_road_routes.py  download_roads_kmz.py  merge_traffic_data.py  process_electric_capacity.py  process_road_segments.py  sync_cloud.py
scripts/archive/: analyze_segment_intervals.py
scripts/processing/: create_backbone_foundation.py  optimize_grid_aware_placement.py
scripts/standardization/: standardize_chargers.py  standardize_traffic.py
